--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "author": "Rafael França <rafaelftourinho@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,13 +22,17 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "chai": "^4.3.7",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.8.1",
     "sinon": "^15.0.1",
-    "sinon-chai": "^3.7.0"
+    "sinon-chai": "^3.7.0",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4"
   }
 }
