--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "start": "node ./src/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
   },
+  "prisma": {
+    "seed": "./prisma/seed.js"
+  },
   "keywords": [],
   "author": "Rafael França <rafaelftourinho@gmail.com>",
   "license": "ISC",
